--- a/Booking_System/package.json
+++ b/Booking_System/package.json
@@ -15,11 +15,14 @@
     "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.2.3",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
