--- a/Booking_System/package.json
+++ b/Booking_System/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "html-react-parser": "^5.2.3",
     "lucide-react": "^0.475.0",
+    "node-appwrite": "^16.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
@@ -41,5 +42,10 @@
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.1.0"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
